@@ -8,3 +8,6 @@ from django.utils.translation import ugettext_lazy as _
 class PyScadaHMIConfig(AppConfig):
     name = 'pyscada.hmi'
     verbose_name = _("PyScada HMI")
+
+    def ready(self):
+        import pyscada.hmi.signals
