@@ -8,3 +8,6 @@ from django.utils.translation import ugettext_lazy as _
 class PyScadaModbusConfig(AppConfig):
     name = 'pyscada.modbus'
     verbose_name = _("PyScada Modbus Master/Client")
+
+    def ready(self):
+        import pyscada.modbus.signals
