@@ -8,3 +8,6 @@ from django.utils.translation import ugettext_lazy as _
 class PyScadaOneWireConfig(AppConfig):
     name = 'pyscada.onewire'
     verbose_name = _("PyScada OneWire")
+
+    def ready(self):
+        import pyscada.onewire.signals
