@@ -4,8 +4,6 @@ from __future__ import unicode_literals
 from pyscada.models import Variable, Device
 
 from django.db import models
-from django.db.models.signals import post_save
-from django.dispatch import receiver
 from django.utils.encoding import python_2_unicode_compatible
 import logging
 
@@ -48,20 +46,3 @@ class ExtendedOneWireVariable(Variable):
         verbose_name = 'OneWire Variable'
         verbose_name_plural = 'OneWire Variable'
 
-
-@receiver(post_save, sender=OneWireVariable)
-@receiver(post_save, sender=OneWireDevice)
-@receiver(post_save, sender=ExtendedOneWireDevice)
-@receiver(post_save, sender=ExtendedOneWireVariable)
-def _reinit_daq_daemons(sender, instance, **kwargs):
-    """
-    update the daq daemon configuration when changes be applied in the models
-    """
-    if type(instance) is OneWireDevice:
-        post_save.send_robust(sender=Device, instance=instance.onewire_device)
-    elif type(instance) is OneWireVariable:
-        post_save.send_robust(sender=Variable, instance=instance.onewire_variable)
-    elif type(instance) is ExtendedOneWireVariable:
-        post_save.send_robust(sender=Variable, instance=Variable.objects.get(pk=instance.pk))
-    elif type(instance) is ExtendedOneWireDevice:
-        post_save.send_robust(sender=Device, instance=Device.objects.get(pk=instance.pk))
