@@ -8,3 +8,6 @@ from django.utils.translation import ugettext_lazy as _
 class PyScadaSMBusConfig(AppConfig):
     name = 'pyscada.smbus'
     verbose_name = _("PyScada SMBus Devices")
+
+    def ready(self):
+        import pyscada.smbus.signals
