@@ -4,8 +4,6 @@ from pyscada.models import Device
 from pyscada.models import Variable
 
 from django.db import models
-from django.db.models.signals import post_save
-from django.dispatch import receiver
 from django.utils.encoding import python_2_unicode_compatible
 import logging
 
@@ -46,21 +44,3 @@ class ExtendedSMbusVariable(Variable):
         proxy = True
         verbose_name = 'SMBus Variable'
         verbose_name_plural = 'SMBus Variables'
-
-
-@receiver(post_save, sender=SMbusVariable)
-@receiver(post_save, sender=SMbusDevice)
-@receiver(post_save, sender=ExtendedSMBusDevice)
-@receiver(post_save, sender=ExtendedSMbusVariable)
-def _reinit_daq_daemons(sender, instance, **kwargs):
-    """
-    update the daq daemon configuration when changes be applied in the models
-    """
-    if type(instance) is SMbusDevice:
-        post_save.send_robust(sender=Device, instance=instance.smbus_device)
-    elif type(instance) is SMbusVariable:
-        post_save.send_robust(sender=Variable, instance=instance.smbus_variable)
-    elif type(instance) is ExtendedSMbusVariable:
-        post_save.send_robust(sender=Variable, instance=Variable.objects.get(pk=instance.pk))
-    elif type(instance) is ExtendedSMBusDevice:
-        post_save.send_robust(sender=Device, instance=Device.objects.get(pk=instance.pk))
