@@ -8,3 +8,6 @@ from django.utils.translation import ugettext_lazy as _
 class PyScadaSystemstatConfig(AppConfig):
     name = 'pyscada.systemstat'
     verbose_name = _("PyScada System Statistics")
+
+    def ready(self):
+        import pyscada.systemstat.signals
