@@ -8,3 +8,6 @@ from django.utils.translation import ugettext_lazy as _
 class PyScadaVISAConfig(AppConfig):
     name = 'pyscada.visa'
     verbose_name = _("PyScada VISA")
+
+    def ready(self):
+        import pyscada.visa.signals
